# AfterNote---A-Study-Agent

./: .gitignore  FINAL_STATUS.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  demo_api.py  package-lock.json  pyproject.toml  setup.py  start-afternote.sh  start-backend.sh  start-frontend.sh  test_backend.py  update_theme.py
backend/: requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: ai_chat.py  auth.py  community.py  documents.py  exams.py  mindmaps.py  notes.py
backend/app/core/: config.py
backend/app/models/: database.py
backend/app/services/: gemini_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Community.tsx  Dashboard.tsx  Documents.tsx  ExamPrep.tsx  MindMaps.tsx  Notes.tsx  StudyBuddy.tsx
